dynamic header template

--- a/client/html/main.html
+++ b/client/html/main.html
@@ -1,15 +1,15 @@
 <head>
-	<title>METEOR BASE</title>
+	<title>Kale</title>
 	<link rel="icon" href="/img/favicon.ico" type="image/x-icon" />
 	<link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon" />
-	<meta name="description" content="Description Content"/>
+	<meta name="description" content="Better Q&A for speaker lectures"/>
 	<meta name="keywords" content="keywords, for, search, engines">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
 
 <body>
 	<div id="mainContainer">
-		{{> header}}
+		<h1> test there person </h1>
 		{{> content}}
-		{{> footer}}
 	</div>
 </body>
