--- a/client/html/header.html
+++ b/client/html/header.html
@@ -1,24 +1,24 @@
 <template name="header">
 	<div id="Header">
-		{{#if home}}
+		{{#page home}}
 			<h2> Welcome to Kale</h2>
-		{{/if}}
-		{{#if join}}
+		{{/page}}
+		{{#page join}}
 			<img src="backbutton.png" alt="Back" height="20" width="20">
 			<h2> Join an Event </h2>
-		{{/if}}
-		{{#if create}}
+		{{/page}}
+		{{#page create}}
 			<img src="backbutton.png" alt="Back" height="20" width="20">
 			<h2> Create an Event </h2>
-		{{/if}}
-		{{#if spec}}
+		{{/page}}
+		{{#page spec}}
 			<img src="backbutton.png" alt="Back" height="20" width="20">
 			<h2> {{eventname}} </h2>
-		{{/if}}
-		{{#if admin}}
+		{{/page}}
+		{{#page admin}}
 			<img src="backbutton.png" alt="Back" height="20" width="20">
 			<h3> {{eventname}} </h3>
 			<h3> {{eventpass}} </h3>
-		{{/if}}
+		{{/page}}
 	</div>
 </template>
