start of create event

--- a/client/html/home.html
+++ b/client/html/home.html
@@ -1,3 +1,14 @@
 <template name="home">
-	<p>home</p>
+	<div id="homepage">
+		<div id="header">
+			<h2>Welcome to Kale</h2>
+		</div>
+		<div id="homeoptions">
+			<ul>
+				<li class="join">Join an Event</li>
+				<li class="create">Create an Event</li>
+				<li class="about">About Kale</li>
+			</ul>
+		</div>
+	</div>
 </template>
