--- a/client/html/create.html
+++ b/client/html/create.html
@@ -1,3 +1,30 @@
 <template name="create">
-	<p>create</p>
+	<div id="createContainer">
+		<div id="createHeader" class="header">
+			<h1>Create</h1>
+		</div>
+		<div id="createOptions">
+			<ul>
+				<li>
+					<p> name </p>
+					<input type="text" id="eventname"><br>
+				</li>
+				<li>
+					<p> location </p>
+					<input type="text" id="eventlocation"><br>
+				</li>
+				<li>
+					<p> speaker </p>
+					<input type="text" id="eventspeaker"><br>
+				</li>
+				<li>
+					<p> email </p>
+					<input type="text" id="eventemail"><br>
+				</li>
+				<li>
+					<img src="/img/favicon.ico" class="eventsubmit" alt="Back" height="20" width="20">
+				</li>
+			</ul>
+		</div>
+	</div>
 </template>
