--- a/client/html/join.html
+++ b/client/html/join.html
@@ -1,3 +1,9 @@
 <template name="join">
-	<p>join</p>
+	<div id="joinContainer">
+		<div id="joinHeader" class="header">
+		<h1>join</h1>
+		</div>
+		<div id="list">
+		</div>
+	</div>
 </template>
