--- a/client/html/admin.html
+++ b/client/html/admin.html
@@ -1,3 +1,13 @@
 <template name="admin">
-	<p>admin</p>
+	<div id="adminheader" class="header">
+		<img src="/img/favicon.ico" class="backbutton" alt="Back" height="20" width="20">
+		<h3>{{eventname}}</h3>
+		<h3>{{passcode}}</h3>
+	</div>
+	<div id="adminquestions">
+	</div>
+	<div id="endevent">
+		<p> End Event </p>
+		<img src="/img/favicon.ico" class="backbutton" alt="Back" height="20" width="20">
+	</div>
 </template>
