--- a/client/html/spec.html
+++ b/client/html/spec.html
@@ -1,3 +1,9 @@
 <template name="spec">
-	<p>spec</p>
+	<img src="/img/favicon.ico" class="backbutton" alt="Back" height="20" width="20">
+	<div id="specHeader" class="header">
+	<img src="/img/favicon.ico" class="askbutton" alt="Back" height="20" width="20">
+	<h2>{{name}}</h2>
+	<div>
+	<div id="specQuestions">
+	</div>
 </template>
