--- a/client/html/spec.html
+++ b/client/html/spec.html
@@ -1,9 +1,24 @@
 <template name="spec">
-	<img src="/img/favicon.ico" class="backbutton" alt="Back" height="20" width="20">
 	<div id="specHeader" class="header">
-	<img src="/img/favicon.ico" class="askbutton" alt="Back" height="20" width="20">
-	<h2>{{name}}</h2>
-	<div>
+		<img src="/img/favicon.ico" class="askbutton" alt="Back" height="20" width="20">
+		<h2>{{eventname}}</h2>
+		<img src="/img/favicon.ico" class="backbutton" alt="Back" height="20" width="20">
+	</div>
 	<div id="specQuestions">
+		{{#if getAllQuestions}}
+		<ul>
+			{{#each getAllQuestions}}
+				<li class="{{_id}}">
+					<p class="question">{{question}}</p>
+					<p class="votes">{{upvotes}}</p>
+				</li>
+			{{/each}}
+		</ul>
+		{{/if}}
+	</div>
+	<div id="askquestion">
+		<input type="text" id="newquestion">
+		<img src="/img/favicon.ico" class="cancelquestion" alt="Back" height="20" width="20">
+		<img src="/img/favicon.ico" class="submitquestion" alt="Back" height="40" width="40">
 	</div>
 </template>
