--- a/client/html/admin.html
+++ b/client/html/admin.html
@@ -1,6 +1,6 @@
 <template name="admin">
 	<div id="adminheader" class="header">
-		<img src="/img/favicon.ico" class="backbutton" alt="Back" height="20" width="20">
+		<img src="/img/backbutton.png" class="backbutton" alt="Back" height="20" width="20">
 		<h3>{{eventname}}</h3>
 	</div>
 	<div id="adminquestions">
@@ -19,6 +19,6 @@
 	</div>
 	<div id="endevent">
 		<p> End Event </p>
-		<img src="/img/favicon.ico" class="backbutton" alt="Back" height="20" width="20">
+		<img src="/img/backbutton.png" class="backbutton" alt="Back" height="20" width="20">
 	</div>
 </template>
