--- a/client/html/main.html
+++ b/client/html/main.html
@@ -1,6 +1,6 @@
 <head>
 	<title>Kale</title>
-	<link rel="icon" href="/img/favicon.ico" type="image/x-icon" />
+	<link rel="icon" href="/img/cancelbutton.png" type="image/x-icon" />
 	<link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon" />
 	<meta name="description" content="Better Q&A for speaker lectures"/>
 	<meta name="keywords" content="keywords, for, search, engines">
