--- a/client/html/spec.html
+++ b/client/html/spec.html
@@ -1,8 +1,8 @@
 <template name="spec">
 	<div id="specHeader" class="header">
-		<img src="/img/favicon.ico" class="askbutton" alt="Back" height="20" width="20">
+		<img src="/img/logo.png" class="askbutton" alt="Back" height="50" width="50">
 		<h2>{{eventname}}</h2>
-		<img src="/img/favicon.ico" class="backbutton" alt="Back" height="20" width="20">
+		<img src="/img/backbutton.png" class="backbutton" alt="Back" height="20" width="20">
 	</div>
 	<div id="specQuestions">
 		{{#if getAllQuestions}}
@@ -18,7 +18,7 @@
 	</div>
 	<div id="askquestion">
 		<input type="text" id="newquestion">
-		<img src="/img/favicon.ico" class="cancelquestion" alt="Back" height="20" width="20">
-		<img src="/img/favicon.ico" class="submitquestion" alt="Back" height="40" width="40">
+		<img src="/img/cancelbutton.png" class="cancelquestion" alt="Back" height="20" width="20">
+		<img src="/img/submitbutton.png" class="submitquestion" alt="Back" height="40" width="40">
 	</div>
 </template>
