--- a/client/html/create.html
+++ b/client/html/create.html
@@ -1,6 +1,6 @@
 <template name="create">
 	<div id="createheader" class="header">
-		<img src="/img/favicon.ico" class="backbutton" alt="Back" height="20" width="20">
+		<img src="/img/backbutton.png" class="backbutton" alt="Back" height="30" width="30">
 		<h1>Create an Event</h1>
 	</div>
 	<div id="createOptions">
@@ -18,7 +18,7 @@
 				<input type="text" id="eventemail" placeholder="Email *"><br>
 			</li>
 			<li>
-				<img src="/img/favicon.ico" class="eventsubmit" alt="Back" height="20" width="20">
+				<img src="/img/submitbutton.png" class="eventsubmit" alt="Back" height="20" width="20">
 			</li>
 		</ul>
 	</div>
