about page tweaks

--- a/client/html/about.html
+++ b/client/html/about.html
@@ -1,3 +1,8 @@
 <template name="about">
-	<p>Kale Salad</p>
+	<div id="aboutheader" class="header">
+		<img src="/img/logo.png" class="askbutton" alt="Back" height="50" width="50">
+		<h1>About Kale</h1>
+		<p>We're just a couple of dudes who have given #toomanyblowjobs. Hit us up for a nice sucky sucky!</p>
+		<img src="/img/backbutton.png" class="backbutton" alt="Back" height="30" width="30">
+	</div>
 </template>
