--- a/client/html/main.html
+++ b/client/html/main.html
@@ -4,11 +4,11 @@
 	<link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon" />
 	<meta name="description" content="Better Q&A for speaker lectures"/>
 	<meta name="keywords" content="keywords, for, search, engines">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+	<meta name="viewport" content="width=100%, initial-scale=1.0"/>
 </head>
 
 <body>
-	<div id="mainContainer">
+	<div id="mainContainer" data-role="page">
 		{{> content}}
 	</div>
 </body>
