css and minor bugs

--- a/client/html/home.html
+++ b/client/html/home.html
@@ -1,13 +1,14 @@
 <template name="home">
 	<div id="homepage">
-		<div id="header">
-			<h2>Welcome to Kale</h2>
+		<div class="homeheader">
+			<img src="/img/logo.png" class="homelogo" alt="Kale" height="100" width="100">
+			<h1 class="hometitle">Kale</h1>
 		</div>
 		<div id="homeoptions">
 			<ul>
-				<li class="join">Join an Event</li>
-				<li class="create">Create an Event</li>
-				<li class="about">About Kale</li>
+				<li class="join" id="homejoinevent">Join an Event</li>
+				<li class="create" id="homecreateevent">Create an Event</li>
+				<li class="about" id="homeaboutkale">About Kale</li>
 			</ul>
 		</div>
 	</div>
