--- a/client/html/main.html
+++ b/client/html/main.html
@@ -1,7 +1,7 @@
 <head>
 	<title>Kale</title>
-	<link rel="icon" href="/img/cancelbutton.png" type="image/x-icon" />
-	<link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon" />
+	<link rel="icon" href="/img/logo.png" type="image/x-icon" />
+	<link rel="shortcut icon" href="/img/logo.png" type="image/x-icon" />
 	<meta name="description" content="Better Q&A for speaker lectures"/>
 	<meta name="keywords" content="keywords, for, search, engines">
 	<meta name="viewport" content="width=device-width, initial-scale=0.7">
