--- a/client/html/create.html
+++ b/client/html/create.html
@@ -1,24 +1,24 @@
 <template name="create">
 	<div id="createheader" class="header">
-		<img src="/img/backbutton.png" class="backbutton" alt="Back" height="30" width="30">
-		<h1>Create an Event</h1>
+		<img src="/img/backbutton.png" class="backbutton" alt="Back" height="45px" width="45px">
+		<h1 id="createtitle">Create an Event</h1>
 	</div>
 	<div id="createOptions">
 		<ul>
 			<li class="createText">
-				<input type="text" id="eventname" placeholder="Name *"><br>
+				<input type="text" id="eventname" class="creationText" placeholder="Name *"><br>
 			</li>
 			<li class="createText">
-				<input type="text" id="eventlocation" placeholder="Location *"><br>
+				<input type="text" id="eventlocation" class="creationText" placeholder="Location *"><br>
 			</li>
 			<li class="createText">
-				<input type="text" id="eventspeaker" placeholder="Speaker"><br>
+				<input type="text" id="eventspeaker" class="creationText" placeholder="Speaker"><br>
 			</li>
 			<li class="createText">
-				<input type="text" id="eventemail" placeholder="Email *"><br>
+				<input type="text" id="eventemail" class="creationText" placeholder="Email *"><br>
 			</li>
 			<li>
-				<img src="/img/submitbutton.png" class="eventsubmit" alt="Back" height="20" width="20">
+				<img src="/img/submitbutton.png" class="eventsubmit" alt="Back" height="55px" width="55px">
 			</li>
 		</ul>
 	</div>
