--- a/client/html/about.html
+++ b/client/html/about.html
@@ -2,7 +2,7 @@
 	<div id="aboutheader" class="header">
 		<img src="/img/logo.png" class="askbutton" alt="Back" height="50" width="50">
 		<h1>About Kale</h1>
-		<p>We're just a couple of dudes who have given #toomanyblowjobs. Hit us up for a nice sucky sucky!</p>
+		<p>Just as kale (the ingredient) infuses any mortal salad with a robust flavor and texture, Kale (our web app) infuses any normal speaker event or lecture with fun, fairness, audience engagement, and efficiency. Next time you're hosting or moderating a speaker event or a panel, create a Kale event to encourage your audience to create and upvote questions. (BULLET ONE)The best questions will be upvoted to the top so you as moderator have a sense of what topics the audience is most curious about. (BULLET TWO) No one will be shy to ask questions since our app is anonymous and secure. (BULLET THREE) Kale reduces the wasted time for searching for raised hands, setting up extra microphones to pass around, or waiting for people to come to the front to ask questions. (BULLET FOUR) Kale is optimized for iPhones and Androids as well as for laptops, so everyone in the audience will be able to ask questions easily and quickly.<br>A little about us: we're Elie Javice and Jeff Grimes, two students at the University of Pennsylvania in the Jerome Fisher Program in Management & Technology. We are both pursuing dual degrees in Computer Science and Entrepreneurial Management. We created this app for two reasons: One, we enjoy going to speaker events at Penn. Two, we freaking love kale and wanted to immortalize our favorite ingredient on the internet. Thanks for checking us out!</p>
 		<img src="/img/backbutton.png" class="backbutton" alt="Back" height="30" width="30">
 	</div>
 </template>
