--- a/client/html/admin.html
+++ b/client/html/admin.html
@@ -1,6 +1,5 @@
 <template name="admin">
 	<div id="adminheader" class="header">
-		<img src="/img/backbutton.png" class="backbutton" alt="Back" height="20" width="20">
 		<h3>{{eventname}}</h3>
 	</div>
 	<div id="adminquestions">
@@ -18,7 +17,6 @@
 	</div>
 	</div>
 	<div id="endevent">
-		<p> End Event </p>
-		<img src="/img/backbutton.png" class="backbutton" alt="Back" height="20" width="20">
+		<img src="/img/endeventbutton.png" class="endeventbutton" alt="End Event" height="40" width="149">
 	</div>
 </template>
