--- a/client/html/home.html
+++ b/client/html/home.html
@@ -1,7 +1,7 @@
 <template name="home">
 	<div id="homepage">
 		<div class="homeheader">
-			<img src="/img/logo.png" class="homelogo" alt="Kale" height="100" width="100">
+			<img src="/img/logo.png" class="homelogo" alt="Kale" height="100px" width="100px">
 			<h1 class="hometitle">Kale</h1>
 		</div>
 		<div id="homeoptions">
