--- a/client/html/join.html
+++ b/client/html/join.html
@@ -1,21 +1,20 @@
 <template name="join">
-	<div id="joinContainer">
-		<div id="joinHeader" class="header">
-		<h1>join</h1>
-		</div>
-		<div id="list">
-		</div>
+	<div id="joinheader" class="header">
+		<img src="/img/backbutton.png" class="backbutton" alt="Back" height="55px" width="55px">
+		<h1 id="jointitle">Join an Event</h1>
 	</div>
-
-	<div id="container">
+	<div id="joinlist">
 		{{#if getAllEvents}}
 		<ul>
 			{{#each getAllEvents}}
 				<li class="{{_id}}">
-					<h3>{{name}} at {{location}} featuring {{speaker}}</h3>
+					<h3 class="aneventname">{{name}}</h3>
+					<h4 class="aneventlocation">at {{location}}</h4>
+					<h5 class="aneventspeaker">featuring {{speaker}}<h5>
 				</li>
 			{{/each}}
 		</ul>
 		{{/if}}
 	</div>
+	<img src="/img/logo.png" class="homelogo" id="joinlogo" alt="Kale" height="100px" width="100px">
 </template>
