--- a/client/html/admin.html
+++ b/client/html/admin.html
@@ -17,6 +17,6 @@
 	</div>
 	</div>
 	<div id="endevent">
-		<img src="/img/endeventbutton.png" class="endeventbutton" alt="End Event" height="40" width="149">
+		<img src="/img/endeventbutton.png" class="endevent" alt="End Event" height="40" width="149">
 	</div>
 </template>
