--- a/client/html/spec.html
+++ b/client/html/spec.html
@@ -1,9 +1,9 @@
 <template name="spec">
-	<div id="specHeader" class="header">
-		<img src="/img/logo.png" class="askbutton" alt="Back" height="50" width="50">
-		<h2>{{eventname}}</h2>
-		<img src="/img/backbutton.png" class="backbutton" alt="Back" height="20" width="20">
+	<div id="specheader" class="header">
+		<img src="/img/backbutton.png" class="backbutton" alt="Back" height="55px" width="55px">
+		<h1 id="spectitle">{{eventname}}</h1>
 	</div>
+
 	<div id="specQuestions">
 		{{#if getAllQuestions}}
 		<ul>
@@ -17,8 +17,8 @@
 		{{/if}}
 	</div>
 	<div id="askquestion">
-		<input type="text" id="newquestion">
-		<img src="/img/cancelbutton.png" class="cancelquestion" alt="Back" height="20" width="20">
-		<img src="/img/submitbutton.png" class="submitquestion" alt="Back" height="40" width="40">
+		<input type="text" id="newquestion" placeholder="Ask a Question">
+		</br>
+		<img src="/img/submitbutton.png" class="submitquestion" alt="Back" height="70px" width="70px">
 	</div>
 </template>
