--- a/client/html/spec.html
+++ b/client/html/spec.html
@@ -17,7 +17,7 @@
 		{{/if}}
 	</div>
 	<div id="askquestion">
-		<input type="text" id="newquestion" placeholder="Ask a Question">
+		<textarea id="newquestion" placeholder="Ask a Question"></textarea>
 		</br>
 		<img src="/img/submitbutton.png" class="submitquestion" alt="Back" height="70px" width="70px">
 	</div>
