--- a/client/html/home.html
+++ b/client/html/home.html
@@ -11,5 +11,9 @@
 				<li class="about" id="homeaboutkale">About Kale</li>
 			</ul>
 		</div>
+		<div id="settingsfooter">
+			<h2>Settings</h2>
+			<img src="/img/settingsbutton.png" class="settings" alt="Settings" height="60px" width="60px">
+		</div>			
 	</div>
 </template>
