--- a/client/html/settings.html
+++ b/client/html/settings.html
@@ -2,7 +2,7 @@
 	<div id="settingsheader" class="header">
 		<img src="/img/backbutton.png" class="backbutton" alt="Back" height="30" width="30">
 		<h1>Your Kale Settings</h1>
-		<p>Coming soon
+		<p>Coming soon</p>
 		<img src="/img/logo.png" class="askbutton" alt="Back" height="50" width="50">
 	</div>
 </template>
