--- a/client/html/settings.html
+++ b/client/html/settings.html
@@ -1,8 +1,8 @@
 <template name="settings">
 	<div id="settingsheader" class="header">
-		<img src="/img/backbutton.png" class="backbutton" alt="Back" height="30" width="30">
-		<h1>Your Kale Settings</h1>
-		<p>Coming soon</p>
-		<img src="/img/logo.png" class="askbutton" alt="Back" height="50" width="50">
+		<img src="/img/backbutton.png" class="backbutton" alt="Back" height="55px" width="55px">
+		<h1 id="settingstitle">Your Kale Settings</h1>
 	</div>
+	<p id="comingsoon">Coming Soon...</p>
+	<img src="/img/logo.png" id="settingslogo" alt="Back" height="100px" width="100px">
 </template>
