--- a/client/html/about.html
+++ b/client/html/about.html
@@ -4,14 +4,14 @@
 		<h1 id="abouttitle">About Kale</h1>
 		<p class="abouttext">Just as kale (the ingredient) infuses any mortal salad with a robust flavor and texture, Kale (our web app) infuses any normal speaker event or lecture with fun, fairness, audience engagement, and efficiency. Next time you're hosting or moderating a speaker event or a panel, create a Kale event to encourage your audience to create and upvote questions.</p>
 		</br>
-		<ol type="1">
+		<ul id="aboutlist">
 			<li class="aboutbullet">1.  The best questions will be upvoted to the top so you as moderator have a sense of what topics the audience is most curious about.</li>
 			<li class="aboutbullet">2.  No one will be shy to ask questions since our app is anonymous and secure.</li>
 			<li class="aboutbullet">3.  Kale reduces the wasted time for searching for raised hands, setting up extra microphones to pass around, or waiting for people to come to the front to ask questions.</li>
 			<li class="aboutbullet">4.  Kale is optimized for iPhones and Androids as well as for laptops, so everyone in the audience will be able to ask questions easily and quickly.</li>
 			<li class="aboutbullet">5.  The text box for adding question is at the bottom of each event page, so audience members will read through all questions before asking their own, ensuring that there's no overlap. </li>
 			<li class="aboutbullet">6.  When you end your event, we send you an email with all of the questions that were asked and submitted.</li>
-		</ol>
+		</ul>
 		</br>
 		<p class="abouttext">A little about us: we're Elie Javice and Jeff Grimes, two students at the University of Pennsylvania in the Jerome Fisher Program in Management & Technology. We are both pursuing dual degrees in Computer Science and Entrepreneurial Management. We created this app for two reasons: One, we enjoy going to speaker events at Penn. Two, we freaking love kale and wanted to immortalize our favorite ingredient on the internet. Thanks for checking us out!</p>
 		</br>
