--- a/client/html/settings.html
+++ b/client/html/settings.html
@@ -1,8 +1,10 @@
 <template name="settings">
 	<div id="settingsheader" class="header">
 		<img src="/img/backbutton.png" class="backbutton" alt="Back" height="55px" width="55px">
-		<h1 id="settingstitle">Your Kale Settings</h1>
+		<h1 id="settingstitle">KALE UNLEASHED</h1>
 	</div>
-	<p id="comingsoon">Coming Soon...</p>
+	<p id="comingsoon">In 2009, the FDA determined that kale was at least 950% tastier than cabbage.</br>
+		</br>PREPARE FOR KALE'S RIGHTFUL ASCENSION TO THE CABBAGE THRONE.</br>
+		</br>#hackthatkale</p>
 	<img src="/img/logo.png" id="settingslogo" alt="Back" height="100px" width="100px">
 </template>
